--- a/app/backend/app/tsconfig.json
+++ b/app/backend/app/tsconfig.json
@@ -7,7 +7,9 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noImplicitAny": true,
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "./*.ts", "__test__", "dist"]
