--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -2,16 +2,17 @@ FROM node:20
 
 WORKDIR /usr/src/app
 
+COPY ./app .
+
 RUN apt-get update && \
-  apt-get install vim -y 
+    apt-get install vim -y 
   
 ENV DOCKERIZE_VERSION v0.7.0
 RUN apt-get install -y wget && \
-  wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin && \
-  apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
+    wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin && \
+    apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
 
-COPY ./app .
-  
 EXPOSE 4000
 
-CMD [ "npm", "run", "dev" ]
+ENTRYPOINT [ "dockerize", "-wait", "tcp://database:3306", "-timeout", "60s", "docker-entrypoint.sh" ]
+CMD [ "sh", "-c", "if [ ! -d node_modules ]; then npm install; fi && npm run dev" ]
