--- a/app/backend/app/tsconfig.json
+++ b/app/backend/app/tsconfig.json
@@ -105,6 +105,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*", "__test__/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["*.config.ts", "node_modules"]
 }
